--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -13,10 +13,10 @@ on:
   push:
     branches: 
       - master
-  schedule:
-    - cron: 0 20 * * *
+  # schedule:
+  #   - cron: 0 20 * * *
   # release:
-  #   types: [star]
+  #   types: [publish]
 
 jobs:
   build:
